修复推荐约束与比较表达